--- a/css/bookform.css
+++ b/css/bookform.css
@@ -1,11 +1,19 @@
 /* Set styles for the form container */
 .booking-form-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background-color: #f2f2f2;
-  }
-  
+ display: block;
+width: 100%;
+height: calc(1.5em + 0.75rem + 2px);
+padding: 0.375rem 0.75rem;
+font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+color: #495057;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #ced4da;
+border-radius: 0.25rem;
+transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
   /* Style the form elements */
   .booking-form input[type=text], 
   .booking-form select {
