--- a/css/dashboards.css
+++ b/css/dashboards.css
@@ -9,16 +9,18 @@
 }
 body{
     background-color: #dfe9f59f;
+    height: 100vh;
 
 }
 .container{
     display: flex;
+    height: 100vh;
 }
-nav{
+.nav{
     position: relative;
     top: 0;
     bottom: 0;
-    height: 100vh;
+    height:100vh;
     left: 0;
     background: #fff;
     width: 280px;
@@ -75,6 +77,7 @@ a:hover{
     position: relative;
     padding: 20px;
     width:100% ;
+    height: 100vh;
 }
 .main-top{
     display: flex;
