--- a/css/search.css
+++ b/css/search.css
@@ -23,6 +23,16 @@
     margin-right: 10px;
     width: 300px;
   }
+  .flex-container {
+      display: flex;
+      align-items: center;
+  }
+
+  .text-center {
+      text-align: center;
+      margin-right: 20px;
+      /* Adjust the margin as needed */
+  }
 
   
   
