--- a/css/registration.css
+++ b/css/registration.css
@@ -40,14 +40,14 @@
   .input-box input[type="email"],
   .input-box input[type="date"],
   .input-box input[type="password"] {
-    border: none;
-    border-radius: 20px;
-    padding: 10px;
     width: 100%;
-    font-size: 16px;
-    font-weight: 300;
-    background-color: #f5f5f5;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
+  
   
   /* Gender details section styling */
   .gender-details {
